MANIFEST.in: include test/ except python bytecode files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,6 @@ graft deps
 graft docs/source
 include docs/Makefile
 include docs/make.bat
+graft test
+recursive-exclude test *.pyc *.pyo
+prune test/__pycache__
